--- a/CCUI-UI/PresetControl.xaml
+++ b/CCUI-UI/PresetControl.xaml
@@ -14,7 +14,7 @@
         </ResourceDictionary>
 
     </Control.Resources>
-    <Grid Background="#373737">
+    <Grid Background="#373737" MouseDown="_PreviewMouseDown">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -26,9 +26,11 @@
             </StackPanel>
         </Button>
 
-        <Viewbox Grid.Column="1" Stretch="Uniform" PreviewMouseDown="_PreviewMouseDown">
-            <TextBlock Name="tbName" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#efefef" Margin="2,0,2,3">PRESET NAME</TextBlock>
-        </Viewbox>
+        <Grid Grid.Column="1" PreviewMouseDown="_PreviewMouseDown">
+            <Viewbox Stretch="Uniform">
+                <TextBlock Name="tbName" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#efefef" Margin="2,0,2,3">PRESET NAME</TextBlock>
+            </Viewbox>
+        </Grid>
 
         <Button Click="btnRun_Click" Name="btnRun" Grid.Column="2" Style="{StaticResource DarkBtn}" Width="40" Height="40">
             <StackPanel Orientation="Horizontal">
