--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -127,6 +127,8 @@
                 <MenuItem  Foreground="Black" Name="mi_importoptions_chooseelements" Header="Filter Elements..." Click="mi_importoptions_chooseelements_Click"></MenuItem>
                 <MenuItem  Foreground="Black" Name="mi_importoptions_choosebehaviour" Header="Import Options..." Click="mi_importoptions_choosebehaviour_Click"></MenuItem>
                 <MenuItem  Foreground="Black" Name="mi_importoptions_plannedcameras" Header="Planned Cameras..." Click="mi_importoptions_plancameras_Click"></MenuItem>
+                <MenuItem  Foreground="Black" Name="mi_importoptions_flightplandetails_pst" Header="Flight Plan Mapping (pst)..." Click="mi_importoptions_fligthplandetails_pst_Click"></MenuItem>
+                <MenuItem  Foreground="Black" Name="mi_importoptions_flightplandetails_zoom" Header="Flight Plan Mapping (zoom)..." Click="mi_importoptions_fligthplandetails_zoom_Click"></MenuItem>
                 <Separator></Separator>
                 <MenuItem  Foreground="Black" Name="miimport_adv" Click="ClickImportServiceAdv" Header="Import Debugger"></MenuItem>
             </MenuItem>
