--- a/IntegratedPresenter/MainWindow.xaml
+++ b/IntegratedPresenter/MainWindow.xaml
@@ -101,92 +101,102 @@
 
                     <Grid Grid.Row="0">
                         <Viewbox>
-                            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                                <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="180">
-                                    <StackPanel>
-                                        <TextBlock HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIME</TextBlock>
-                                        <Viewbox>
-                                            <TextBlock Name="TbTime" Foreground="Orange">00:00:00</TextBlock>
-                                        </Viewbox>
-                                        <Viewbox Width="140" Height="20" Margin="0,-10,0,0">
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock Style="{StaticResource GrayText}">Switcher:</TextBlock>
-                                                <TextBlock Name="tb_switcherConnection" Margin="5,0,0,0" Foreground="Red">Disconnected</TextBlock>
-                                            </StackPanel>
-                                        </Viewbox>
+                            <StackPanel>
+
+                                <Grid>
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                        <TextBlock Foreground="#a0a0a0">HOT RELOAD:</TextBlock>
+                                        <TextBlock Name="tbHotReloadStatus" Foreground="white" Margin="10, 0, 0, 0">OFF</TextBlock>
                                     </StackPanel>
-                                </Border>
-                                <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="120">
-                                    <Grid>
-                                        <TextBlock VerticalAlignment="Top" HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIME ON SHOT</TextBlock>
-                                        <Viewbox VerticalAlignment="Center">
-                                            <TextBlock Name="TbShotClock" Foreground="Orange">00:00</TextBlock>
-                                        </Viewbox>
-                                        <Viewbox VerticalAlignment="Bottom" Width="100" Height="20" Margin="0,-10,0,0" Cursor="Hand" MouseDown="ClickResetTotalShotCount">
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock Style="{StaticResource GrayText}">Total Shots:</TextBlock>
-                                                <TextBlock Name="tb_tos_TotalShots" Margin="5,0,0,0" Foreground="Orange">0</TextBlock>
-                                            </StackPanel>
-                                        </Viewbox>
-                                    </Grid>
-                                </Border>
-                                <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="120">
-                                    <Grid>
-                                        <TextBlock VerticalAlignment="Top" HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIMER 1</TextBlock>
-                                        <Viewbox VerticalAlignment="Center">
-                                            <TextBlock Cursor="Hand" MouseDown="ClickResetgpTimer1" Name="TbGPTimer1" Foreground="Orange">00:00</TextBlock>
-                                        </Viewbox>
-                                        <Viewbox VerticalAlignment="Bottom" Width="100" Height="20" Margin="0,-10,0,0">
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock Style="{StaticResource GrayText}">Shots:</TextBlock>
-                                                <TextBlock Name="tb_t1_shots" Margin="5,0,0,0" Foreground="Orange">0</TextBlock>
-                                            </StackPanel>
-                                        </Viewbox>
-                                    </Grid>
-                                </Border>
-                                <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="120">
-                                    <Grid>
-                                        <TextBlock VerticalAlignment="Top" HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIMER 2</TextBlock>
-                                        <Viewbox VerticalAlignment="Center">
-                                            <TextBlock Cursor="Hand" MouseDown="ClickResetgpTimer2" Name="TbGPTimer2" Foreground="Orange">00:00</TextBlock>
-                                        </Viewbox>
-                                        <Viewbox VerticalAlignment="Bottom" Width="100" Height="20" Margin="0,-10,0,0">
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock Style="{StaticResource GrayText}">Shots:</TextBlock>
-                                                <TextBlock Name="tb_t2_shots" Margin="5,0,0,0" Foreground="Orange">0</TextBlock>
-                                            </StackPanel>
-                                        </Viewbox>
-                                    </Grid>
-                                </Border>
-                                <Border x:Name="borderBtnRecording" Visibility="Collapsed" Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="100">
-                                    <StackPanel>
-                                        <TextBlock HorizontalAlignment="Center" Style="{StaticResource GrayText}">RECORDING</TextBlock>
-                                        <Grid>
-                                            <Viewbox Name="ksc_r" Panel.ZIndex="1" Height="80" Width="80">
+                                </Grid>
+
+                                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                                    <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="180">
+                                        <StackPanel>
+                                            <TextBlock HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIME</TextBlock>
+                                            <Viewbox>
+                                                <TextBlock Name="TbTime" Foreground="Orange">00:00:00</TextBlock>
+                                            </Viewbox>
+                                            <Viewbox Width="140" Height="20" Margin="0,-10,0,0">
                                                 <StackPanel Orientation="Horizontal">
-                                                    <Border Style="{StaticResource UIShortcutBdr}">
-                                                        <Viewbox>
-                                                            <TextBlock Style="{StaticResource UIShortcut}">F5</TextBlock>
-                                                        </Viewbox>
-                                                    </Border>
-                                                    <TextBlock Foreground="White" FontWeight="Bold" FontSize="30" Style="{StaticResource UIShortcut}" Margin="5">/</TextBlock>
-                                                    <Border Style="{StaticResource UIShortcutBdr}">
-                                                        <Viewbox>
-                                                            <TextBlock Style="{StaticResource UIShortcut}">F6</TextBlock>
-                                                        </Viewbox>
-                                                    </Border>
+                                                    <TextBlock Style="{StaticResource GrayText}">Switcher:</TextBlock>
+                                                    <TextBlock Name="tb_switcherConnection" Margin="5,0,0,0" Foreground="Red">Disconnected</TextBlock>
                                                 </StackPanel>
                                             </Viewbox>
-                                            <Button Focusable="False" Name="btnRecording" IsTabStop="false" Background="Gray">
-                                                <Button.Template>
-                                                    <ControlTemplate>
-                                                        <Ellipse Cursor="Hand" Margin="5" Width="60" Height="60" Fill="{TemplateBinding Property=Background}"></Ellipse>
-                                                    </ControlTemplate>
-                                                </Button.Template>
-                                            </Button>
+                                        </StackPanel>
+                                    </Border>
+                                    <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="120">
+                                        <Grid>
+                                            <TextBlock VerticalAlignment="Top" HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIME ON SHOT</TextBlock>
+                                            <Viewbox VerticalAlignment="Center">
+                                                <TextBlock Name="TbShotClock" Foreground="Orange">00:00</TextBlock>
+                                            </Viewbox>
+                                            <Viewbox VerticalAlignment="Bottom" Width="100" Height="20" Margin="0,-10,0,0" Cursor="Hand" MouseDown="ClickResetTotalShotCount">
+                                                <StackPanel Orientation="Horizontal">
+                                                    <TextBlock Style="{StaticResource GrayText}">Total Shots:</TextBlock>
+                                                    <TextBlock Name="tb_tos_TotalShots" Margin="5,0,0,0" Foreground="Orange">0</TextBlock>
+                                                </StackPanel>
+                                            </Viewbox>
                                         </Grid>
-                                    </StackPanel>
-                                </Border>
+                                    </Border>
+                                    <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="120">
+                                        <Grid>
+                                            <TextBlock VerticalAlignment="Top" HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIMER 1</TextBlock>
+                                            <Viewbox VerticalAlignment="Center">
+                                                <TextBlock Cursor="Hand" MouseDown="ClickResetgpTimer1" Name="TbGPTimer1" Foreground="Orange">00:00</TextBlock>
+                                            </Viewbox>
+                                            <Viewbox VerticalAlignment="Bottom" Width="100" Height="20" Margin="0,-10,0,0">
+                                                <StackPanel Orientation="Horizontal">
+                                                    <TextBlock Style="{StaticResource GrayText}">Shots:</TextBlock>
+                                                    <TextBlock Name="tb_t1_shots" Margin="5,0,0,0" Foreground="Orange">0</TextBlock>
+                                                </StackPanel>
+                                            </Viewbox>
+                                        </Grid>
+                                    </Border>
+                                    <Border Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="120">
+                                        <Grid>
+                                            <TextBlock VerticalAlignment="Top" HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIMER 2</TextBlock>
+                                            <Viewbox VerticalAlignment="Center">
+                                                <TextBlock Cursor="Hand" MouseDown="ClickResetgpTimer2" Name="TbGPTimer2" Foreground="Orange">00:00</TextBlock>
+                                            </Viewbox>
+                                            <Viewbox VerticalAlignment="Bottom" Width="100" Height="20" Margin="0,-10,0,0">
+                                                <StackPanel Orientation="Horizontal">
+                                                    <TextBlock Style="{StaticResource GrayText}">Shots:</TextBlock>
+                                                    <TextBlock Name="tb_t2_shots" Margin="5,0,0,0" Foreground="Orange">0</TextBlock>
+                                                </StackPanel>
+                                            </Viewbox>
+                                        </Grid>
+                                    </Border>
+                                    <Border x:Name="borderBtnRecording" Visibility="Collapsed" Padding="5,5,5,5" Style="{StaticResource GroupBorder}" Width="100">
+                                        <StackPanel>
+                                            <TextBlock HorizontalAlignment="Center" Style="{StaticResource GrayText}">RECORDING</TextBlock>
+                                            <Grid>
+                                                <Viewbox Name="ksc_r" Panel.ZIndex="1" Height="80" Width="80">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <Border Style="{StaticResource UIShortcutBdr}">
+                                                            <Viewbox>
+                                                                <TextBlock Style="{StaticResource UIShortcut}">F5</TextBlock>
+                                                            </Viewbox>
+                                                        </Border>
+                                                        <TextBlock Foreground="White" FontWeight="Bold" FontSize="30" Style="{StaticResource UIShortcut}" Margin="5">/</TextBlock>
+                                                        <Border Style="{StaticResource UIShortcutBdr}">
+                                                            <Viewbox>
+                                                                <TextBlock Style="{StaticResource UIShortcut}">F6</TextBlock>
+                                                            </Viewbox>
+                                                        </Border>
+                                                    </StackPanel>
+                                                </Viewbox>
+                                                <Button Focusable="False" Name="btnRecording" IsTabStop="false" Background="Gray">
+                                                    <Button.Template>
+                                                        <ControlTemplate>
+                                                            <Ellipse Cursor="Hand" Margin="5" Width="60" Height="60" Fill="{TemplateBinding Property=Background}"></Ellipse>
+                                                        </ControlTemplate>
+                                                    </Button.Template>
+                                                </Button>
+                                            </Grid>
+                                        </StackPanel>
+                                    </Border>
+                                </StackPanel>
                             </StackPanel>
                         </Viewbox>
                     </Grid>
@@ -2220,7 +2230,7 @@
                                         <Viewbox Name="SpeculativeJumpPreviewDisplay" Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="576" Height="424">
                                             <Grid Height="1080" Width="1920">
                                                 <!--<Border Panel.ZIndex="10" VerticalAlignment="Top" HorizontalAlignment="Center">-->
-                                                    <!--<TextBlock Foreground="Orange" FontWeight="Bold" FontSize="200">JUMP TARGET</TextBlock>-->
+                                                <!--<TextBlock Foreground="Orange" FontWeight="Bold" FontSize="200">JUMP TARGET</TextBlock>-->
                                                 <!--</Border>-->
                                                 <Grid Width="1920" Height="1080">
                                                     <Border Name="SpeculativeJumpPreviewBorder" BorderBrush="Blue" BorderThickness="2,2,2,2">
